--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,44 +1,21 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Listen for Xdebug",
-            "type": "php",
-            "request": "launch",
-            "port": 9003
-        },
-        {
-            "name": "Launch currently open script",
+            "name": "Launch PHP",
             "type": "php",
             "request": "launch",
             "program": "${file}",
-            "cwd": "${fileDirname}",
-            "port": 0,
+            "cwd": "${workspaceFolder}",
+            "runtimeExecutable": "/path/to/php",
             "runtimeArgs": [
-                "-dxdebug.start_with_request=yes"
+                "-dxdebug.remote_enable=1",
+                "-dxdebug.remote_autostart=1",
+                "-dxdebug.remote_port=9000",
+                "-dxdebug.remote_host=127.0.0.1"
             ],
-            "env": {
-                "XDEBUG_MODE": "debug,develop",
-                "XDEBUG_CONFIG": "client_port=${port}"
-            }
-        },
-        {
-            "name": "Launch Built-in web server",
-            "type": "php",
-            "request": "launch",
-            "runtimeArgs": [
-                "-S",
-                "localhost:8000",
-                "-t",
-                "."
-            ],
-            "cwd": "${workspaceRoot}",
-            "port": 9003,
             "serverReadyAction": {
-                "pattern": "Development Server \\(http://localhost:([0-9]+)\\) started",
+                "pattern": "Development Server \\(http://localhost:.*?\\) started",
                 "uriFormat": "http://localhost:%s",
                 "action": "openExternally"
             }
